css/style.css
* {
	margin: 0px;
}

div{
	display: block;
	overflow: auto;
}
div > #newsSect{
	overflow-y: hidden;
}

div > a{
	color: inherit;
}

div > a:hover{
	text-decoration: none;
	color: white;
}

::-webkit-scrollbar { 
    display: none; 
}

/*
	1) Parent-Child:
		Between sect/subSection and html/body, we originally 
		declared .sect and .subSection to have height of 100%,
		but the paret (html/body) did not have a height so nothing
		showed up on the html page. Have to set up parent if using percentage
		rather than number of pixels.
 */


html, body{
	height: 100%;
	font-family: Khula, sans-serif;
}

h1 {
	margin: 50px 10% 30px 10%;
}

h1 + div{
	padding: 0 40px 10px 40px;
}

h2, h3, h4, h5, h6, p {
	margin-bottom: 20px;
	padding: 0px;
}

hr{
	margin: 0 7.5% 0 7.5%;	
	width: 85%;
}


/*Making skeleton of Page
1) We know we need a nav and a top div
2) All images are the same styling 100% tall and 100% wide (.sect)
	a) Thus we can create one class that can style all of those
		i) Make classes for this instead of using the tags/elements
	b) By default img will be 100% width because it's a div so it's unneeded to put it explicitly.
3) Subsections similar to images
	a) Difference is only 50% wide and 100% wide
*/

.logo{
	margin: 0px 0px 0px 50px;
	padding: 0px;
	float: left;
	color: rgb(202,210,197);
	line-height: 50px;
}

/*Nav Bar Menu*/
nav {
	/*background-color: rgba(142, 22, 22, .8);
	display: inline-block;
	height: 50px;
	overflow: scroll;
	position: fixed;
	text-align: center;
	width: 100%;*/
	z-index: 99;
	width: 100%;
	display: inline-block;
}

.headerButton {
	color:white;
}
/*.navbar-inverse .navbar-nav>li>a {
    color: white;
}*/


.navbar-collapse{
	border-top: 0px;
}


.navbar-nav{
	float: none;
	text-align: center;
}
.navbar-nav li {
	  margin: 0 10px;
	  float: none;
	  display: inline-block;
	}

.navbar-toggle {
    border: none;
    border-radius: 0px;
}
/* KEEPS THE HAMBURGER ICON THE CORRECT COLOR */
.navbar-inverse, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
    background-color: rgba(113, 17, 17, .8);
}

nav ul {
	
	list-style: none;

}

nav ul li{
	display: inline;
	list-style: none;


}

nav a {
	text-decoration: none;
	color: white;
	margin-left: ;
	line-height: 75% !important;
	cursor: pointer;
	font-family: Khula, sans-serif;

}

div img
{
	display: block;
	margin-left: auto;
	margin-right: auto;
}


.br-left{
	display: block;
	line-height: 200px;
}

.btn-square{
	color: white;
    border: none;
    padding: 10px 115px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.btn-square-sm{
	color: white;
    border: none;
    padding: 6px 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.TeamButton {
	/* -webkit-border-radius: 15px; */
    background-color: rgb(142, 22, 22); /* Red */
    color: white;
    border: none;
    padding: 20px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.TeamButton:hover {
    background-color: #7a1919; /* Red */
    color: #eadada;
}

.table{
	display: table;
	margin: 0 auto;
	text-align: center;

}

.sect {
	color: rgb(255,255,255);
	min-height: 60%;
	max-height: 100%;
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
	padding: 0px;
}

#CCCmast {
	font-size: 312%;
	text-align: center;
	color: #fff;
	margin-bottom: 2%;
	padding: 0px;
}

#CallToAction {
	font-size: 2em;
	text-align: center;
}

.sect p {
	text-align: left;
	margin-left: 5%;
	margin-right: 5%;
}
.subSection p {
	margin-top: 2%;
	margin-left: 5%;
	margin-right: 5%;
}


.subSection {
	/*height: 70%;*/
	min-height: 60%;
	background-color: rgb(202,210,197);
}

.contactInfo {
	padding-top: 5%;
	padding-right: 10%;
}

.emailBox {
	max-width: 300px;
}

#contactSect {
	background: rgb(142, 22, 22);
	color: white;
	padding: 0% 20% 10% 20%;
}
/*CT: https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG*/
.sectA {
	background: url("../images/cornell2.jpg") no-repeat center center fixed;
}

/*CT: http://kabegami.org/wp-content/uploads/2016/07/0mmRo9a1.jpg*/
.sectB {
	background: url("../images/artsquad.jpg") no-repeat center center fixed;
	color: rgb(0, 0, 0);
}

/*CT:https://i.ytimg.com/vi/XuAAooA56V4/maxresdefault.jpg*/
.sectC {
	background: url("../images/hoplaza.jpeg") no-repeat center center fixed;
}

.CCCLogo {
	padding-top: 100px;
}

.carousel-caption {
    top: 0;
    bottom: auto;
}

#applySect { 
	padding-bottom: 40px;

}

#teamSect {
	text-align: center;
}

.text-left {
	text-align: left;
	max-width: 100%;
	padding: 20px;
}


/*Make Carousel Full div*/
.carousel-inner>.item>img, .carousel-inner>.item>a>img {
	display: block;
	height: auto;
	overflow: hidden;
	max-width: 100%;
	line-height: 1;
	width: 100%;

}

.btn-envelope{color:#8E1616;background-color:#ffffff;border-color:rgba(0,0,0,0.2)}.btn-envelope:focus,.btn-envelope.focus{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}
.btn-envelope:hover{color:#8E1616;background-color:#bbbbbb;border-color:rgba(0,0,0,0.2)}
.btn-envelope:active,.btn-envelope.active,.open>.dropdown-toggle.btn-envelope{color:#8E1616;background-color:#777777;border-color:rgba(0,0,0,0.2)}.btn-envelope:active:hover,.btn-envelope.active:hover,.open>.dropdown-toggle.btn-envelope:hover,.btn-envelope:active:focus,.btn-envelope.active:focus,.open>.dropdown-toggle.btn-envelope:focus,.btn-envelope:active.focus,.btn-envelope.active.focus,.open>.dropdown-toggle.btn-envelope.focus{color:#8E1616;background-color:#777777;border-color:rgba(0,0,0,0.2)}
.btn-envelope:active,.btn-envelope.active,.open>.dropdown-toggle.btn-envelope{background-image:none}
.btn-envelope.disabled,.btn-envelope[disabled],fieldset[disabled] .btn-envelope,.btn-envelope.disabled:hover,.btn-envelope[disabled]:hover,fieldset[disabled] .btn-envelope:hover,.btn-envelope.disabled:focus,.btn-envelope[disabled]:focus,fieldset[disabled] .btn-envelope:focus,.btn-envelope.disabled.focus,.btn-envelope[disabled].focus,fieldset[disabled] .btn-envelope.focus,.btn-envelope.disabled:active,.btn-envelope[disabled]:active,fieldset[disabled] .btn-envelope:active,.btn-envelope.disabled.active,.btn-envelope[disabled].active,fieldset[disabled] .btn-envelope.active{background-color:#3b5998;border-color:rgba(0,0,0,0.2)}

#SubscribeButton {
	color: rgb(142, 22, 22);
	background-color: white;
	border: 1px solid rgb(202,210,197);
	border-radius: 1px;
}

#SubscribeButton:hover {
	background-color: #C8C8C8;
}

.navbar{
	background-color: rgba(142, 22, 22, .8);
	position: fixed;
	color: white;
	border-radius: 0px;
	border: 0px;

}

.container-fluid{
	text-align: center;
	padding-top: 0.8%;
}


@media screen and (max-width: 768px){
	
	#CallToAction{
		font-size: 130%;
	}

	.subSection{
		overflow: auto;
		width: 100%;
	}

	.br-left{
		display: block;
		line-height: 0px;
	}
	.navbar-nav li {
	  float: none;
	  display: inline;
	}

	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
		display: block;
		height: 500px;
		overflow: hidden;
		max-width: 100%;
		line-height: 1;
		width: 100%;

	}
}

@media screen and (max-width: 480px){
	#CallToAction{
		font-size: 120%;
	}

	#CCCmast{
		font-size: 275%;

	}

	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
		display: block;
		height: 350px;
		overflow: hidden;
		max-width: 100%;
		line-height: 1;
		width: 100%;
	}
}

@media screen and (min-width: 769px){
	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
		display: block;
		height: 670px;
		overflow: hidden;
		max-width: 100%;
		line-height: 1;
		width: 100%;
	}
}

